# modelUsage

./: AGENTS.md  Cargo.toml  PRICING-zh.md  PRICING.md  README-zh.md  README.md
.github/workflows/: ci.yml  release.yml
docs/: IMPLEMENTATION-zh.md  IMPLEMENTATION.md
pricing/: official-pricing.json
src/: app.rs  cache.rs  claude.rs  cli.rs  codex.rs  copilot.rs  main.rs  model.rs  pricing.rs  profile.rs  report.rs  table.rs  timezone.rs  update.rs
