[package]
name = "modelUsage"
version = "0.1.5"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.12", default-features = false, features = ["json", "tls"] }
walkdir = "2.5"
